--- a/docs/static/lib/playground/playground.css
+++ b/docs/static/lib/playground/playground.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background-color: #333;
+  background-color: #bbb;
   overflow-y: scroll;
   overflow-x: hidden;
   margin: 0 -5px 0 0;
