Docs: Upgrade code editor (#16)
* docs: refactor scripts

* name details elements

* add autoplay feature

* wip

* add codemirror

* try ace instead of codemirror -- no dice

* monaco editor also no worky

* Revert "monaco editor also no worky"

This reverts commit d8f548eb7605de339ba0b39dbb88326213aa76b4.

* Revert "try ace instead of codemirror -- no dice"

This reverts commit 58d18411aa08e1303f924ca7bf613a10d547a8fc.

* fix codemirror editor, no syntax highlighting ;(

--- a/docs/static/lib/playground/playground.css
+++ b/docs/static/lib/playground/playground.css
@@ -107,6 +107,11 @@ iframe {
   border-radius: 0 0 0.5em 0.5em;
 }
 
+#editor {
+  height: initial;
+  color: black;
+}
+
 #buildOutput,
 #consoleOutput {
   margin: 0;
